--- a/index.html
+++ b/index.html
@@ -1,37 +1,60 @@
-<html>
-    <head>
-        <title>My apps and games</title>
-        <link rel="stylesheet"href="style.css">
-            </head>
-    <body>
-        <section id="app">
-            <h1>APPS
-                            </h1>
-            <div class="line">
-            </div>
-            <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/cXWElNoVVhP88e7tkfsAE3Vj5V2NmkFMRaEvB0dYQvI/embed"></iframe>
-            <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/pZaTXERO4YtyePIQ55hhYZr5y7ARwHA3w4UxJ2tkMLU/embed"></iframe>
-            
-        </section>
-        <section id="game">
-            <h1>GAMES
-            </h1>
-            <div class="line">
-            </div>
-            <a href="https://studio.code.org/projects/spritelab/HKABiwFsX_pfi0fkLbeujKlX4VM5hps--pQ8GCUkWaU" target="_blank">
-                <img src="my%20game.png">
-            </a>
-            <a href="https://studio.code.org/projects/spritelab/Ml1RZEfUHCn2PpprtZNEISpRw-K2fyDt6H1DUVyLFh4"target="_blank">
-                <img src="kam.png">
-                
-            </a>
-        </section>
-        <section id="chatbot">
-            <h1> CHATBOT
-            </h1>
-            <div class="line">
-            </div>
-            <iframe allow="microphone;" width="350px" height="500px" src="https://console.dialogflow.com/api-client/demo/embedded/82e2fc96-1906-4bd8-a9d2-84a17f04ea54" > </iframe>
-        </section>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+
+    <section id="app">
+        <h1>Apps</h1>
+        <div class="line"></div>
+        <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/AmAIOlod-80aGvVFcBdbfjebPGUlVaYjI8ECZcJtZks/embed"></iframe>
+        <iframe width="400" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/U9AQsuLnTixFr5caYUBM9qmkuaPCvmuWblFMcUPrC14/embed"></iframe>
+    </section>
+
+<!--
+Start your code from here
+-->
+<h2>Click on the games to explore
+    </h2> <h5>these games are biult in code.org game lab</h5>
+  <div id= "myCarousel" class="carousel slide">
+ <div class="carousel-inner">
+      <div class="item active">
+     <center>
+     <a href="https://studio.code.org/projects/spritelab/-UTij1-s6yym6CWzK9yvWnySTDZes8fMmozv2a-L5Fw" target="_blank">
+         <img src="thumbnail.png" class="img-responsive">
+         </a>
+         <div class="carousel-content">
+         <p>Winnie the pooh game</p>
+         </div>
+          </center>
+     </div>
+       <div class="item">
+     <center>
+     <a href="https://studio.code.org/projects/spritelab/HKABiwFsX_pfi0fkLbeujKlX4VM5hps--pQ8GCUkWaU"target="_blank">
+         <img src="thumbnail%20(1).png" class="img-responsive">
+         </a>
+         <div class="carousel-content">
+         <p>COVID FIGHTING GAME</p>
+         </div>
+          </center>
+     </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+       <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
+    </div>  
+</div>
+
+</body>
 </html>
